--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: Calvin Mclean
-  description: Installs cctools.
+  description: Installs maker.
   company: CyVerse
   license: BSD
   min_ansible_version: 2.2
@@ -16,7 +16,13 @@ galaxy_info:
     - xenial
   galaxy_tags:
     - installer
-    - cctools
+    - maker
     - bioscience
+    - cyverse
 
-dependencies: []
+dependencies:
+  - CyVerse-Ansible.ncbi-blast
+  - CyVerse-Ansible.snap
+  - CyVerse-Ansible.repeat-masker
+  - CyVerse-Ansible.exonerate
+  - CyVerse-Ansible.augustus
